--- a/dbassist-annotations/build.gradle
+++ b/dbassist-annotations/build.gradle
@@ -6,3 +6,7 @@ dependencies {
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
+
+ext.projectArtifactId   = "dbassist-annotations"
+
+apply from: rootProject.file('gradle/bintrayUpload.gradle')
